Fix: Styling and spacing of options

--- a/attachment/static/css/survey.css
+++ b/attachment/static/css/survey.css
@@ -14,6 +14,8 @@
 .option-container {
     display: flex;
     flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
 }
 
 .block-label {
@@ -58,4 +60,12 @@
     width: 100%;
     height: auto;
     object-fit: cover;
+}
+
+.right {
+    float: right;
+}
+
+.left {
+    float: left;
 }
